--- a/index.html
+++ b/index.html
@@ -1,18 +1,10 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="0; URL='https://waywardmark.com/'" />
-    <title>Redirecting...</title>
-  </head>
-  <body>
-    <h1>Redirecting...</h1>
-    <p>
-      If you are not redirected,
-      <a href="https://waywardmark.com/">click here</a>.
-    </p>
-    <script>
-      window.location.href = "https://waywardmark.com/";
-    </script>
-  </body>
-</html>
+---
+layout: default
+---
+
+<section class="landing">
+  <div class="landing-content">
+    <h1>Welcome</h1>
+    <h3><strong>Explore my blog, photography, and cartography pages</strong></h3>
+  </div>
+</section>
