--- a/404.html
+++ b/404.html
@@ -1,13 +1,15 @@
 ---
-layout: default
-title: 404 - Page not found
-permalink: /404.html
+layout: page
 ---
 
-<div class="text-center">
-  <h1>Whoops, this page doesn't exist.</h1>
-  <h1>Move along. (404 error)</h1>
-  <br/>
+<div class="error-page-container">
+  <h1>Page Not Found</h1>
 
-  <img src="{{ 'assets/img/404-southpark.jpg' | relative_url }}" alt="Not found" />
+  <p class="emoji">¯\_(ツ)_/¯</p>
+  <p><strong>Oops! We couldn't find what you're looking for.</strong></p>
+  <p>
+    Either you mistyped the URL or the page you are looking for has been
+    abducted by <p class="emoji-alien"> &#128125;</p>
+  </p>
+  <p>Don't worry, though. We're on the case and trying to rescue it!</p>
 </div>
