check digital maps index

--- a/digital_maps/index.html
+++ b/digital_maps/index.html
@@ -1,5 +1,5 @@
 ---
 layout: digital_maps
 title: Interactive Maps
-description: "Mark Cruse"
+description: "Mark Cruse, Digital Map Collection"
 ---
